# blahaj

./: .env.example  .gitignore  Cargo.toml  README.md  blahaj.example.toml  default.nix  flake.nix  jsconfig.json  module.nix  package-lock.json  package.json  railwail.toml  shell.nix
.github/workflows/: test.yml
migrations/: 0001_init.sql
src/: bot.js  config.rs  http_server.rs  main.rs  nixpkgs_db.rs  types.rs  utils.rs
src/commands/: avatar.rs  bot.rs  dice.rs  kittysay.rs  mod.rs
src/commands/bot/: bot.rs  mod.rs  ping.rs
src/commands/fun/: bottom.rs  chance.rs  dice.rs  genz.rs  height.rs  kittysay.rs  mod.rs  nix.rs  nixdle.rs  pet.rs  they.rs
src/commands/help/: help.js  invite.js  ping.js
src/commands/misc/: avatarsync.rs  crates.rs  mod.rs  nixpkgs.rs  starboard.rs  typst.rs
src/commands/mod/: ban.js  clear.js  kick.js  prune.js
src/commands/moderation/: ban.js  ban.rs  kick.js  kick.rs  mod.rs  purge.js  purge.rs  timeout.js  timeout.rs  unban.js  untimeout.js
src/commands/nix/: mod.rs  nix.rs  nixpkg.rs  nixpkgs.rs  track.rs
src/commands/tools/: avatar.js  botstatus.js  button.js  embed.js  github.js  serverinfo.js  whois.js
src/commands/user/: avatar.rs  color_me.rs  mod.rs  whois.rs
src/commands/user/relationship/: db.rs  logic.rs  mod.rs  reply.rs
src/commands/userContext/: avatar.js  getAvatar.js  userinfo.js
src/components/buttons/: github-btn.js
src/event_handler/: blahaj_is_this_true.rs  code_expantion.rs  grok.rs  kitten.rs  mod.rs  replace_link.rs  starboard.rs
src/events/client/: interactionCreate.js  ready.js
src/functions/handlers/: commands.js  components.js  events.js  handleCommands.js  handleEvents.js
src/functions/tools/: pickPresence.js
