[package]
name = "blahaj"
version = "0.2.1"
license = "MIT"
authors = ["isabel roses <isabel@isabelroses.com>"]
description = "the resident discord bot of :3"
readme = "README.md"
homepage = "https://github.com/isabelroses/blahaj"
repository = "https://github.com/isabelroses/blahaj"
keywords = ["discord", "bot", "serenity"]
edition = "2024"

[dependencies]
bottomify = "1.2.0"
chrono = "0.4.43"
color-eyre = "0.6.5"
dotenv = "0.15.0"
humantime = "2.3.0"
kittysay = "0.8.0"
nixpkgs-track_lib = "0.5.0"
rand = "0.9.2"
regex = "1.12.2"
serde_json = "1.0.149"
serenity = "0.12.5"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
simd-json = { version = "0.17.0", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
once_cell = "1.21.3"
brotli = "8.0.2"
sha2 = "0.10.9"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.12"
features = ["json"]

[dependencies.tokio]
version = "1.49.0"
features = ["macros", "rt-multi-thread"]

[lints.clippy]
all = "warn"
pedantic = "warn"
unreadable_literal = { level = "allow", priority = 1 }
