[package]
name = "blahaj"
version = "0.2.2"
license = "MIT"
authors = ["isabel roses <isabel@isabelroses.com>"]
description = "the resident discord bot of :3"
readme = "README.md"
homepage = "https://github.com/isabelroses/blahaj"
repository = "https://github.com/isabelroses/blahaj"
keywords = ["bot", "discord", "serenity"]
edition = "2024"

[dependencies]
base64 = "0.22.1"
bottomify = "1.2.0"
brotli = "8.0.2"
chrono = "0.4.44"
color-eyre = "0.6.5"
confique = { version = "0.4.0", features = ["toml"] }
dotenv = "0.15.0"
humantime = "2.3.0"
kittycore = "0.1.1"
nixpkgs-track_lib = "0.5.0"
once_cell = "1.21.4"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
rand = "0.10.1"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.149"
serenity = "0.12.5"
sha2 = "0.11.0"
simd-json = { version = "0.17.0", features = ["serde"] }
typst = "0.14.2"
typst-render = "0.14.2"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }

[dependencies.reqwest]
version = "0.12.12"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.52.3"
features = ["macros", "rt-multi-thread"]

[lints.clippy]
all = "warn"
pedantic = "warn"
unreadable_literal = { level = "allow", priority = 1 }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
